# Project-Aegis-AI-Cyber-Defense-Platform-

./: .env  .gitignore  If you implement the following.txt  README.md  layout.tsx  page.tsx  password and username.txt  timeline_collector.py
aegis-ai/: .env.example  .gitignore  README.md
aegis-ai/.github/workflows/: ci.yml
aegis-ai/aegis-ai/services/agent-orchestrator/: requirements.txt
aegis-ai/frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
aegis-ai/frontend/aegis-frontend/: tailwind.config.js
aegis-ai/frontend/app/: globals.css  layout.tsx  page.tsx
aegis-ai/frontend/app/alerts/: page.tsx
aegis-ai/frontend/app/simulator/: page.tsx
aegis-ai/frontend/components/: JsonViewer.tsx  LoadingSkeleton.tsx  MetricCard.tsx  SeverityBadge.tsx  StatusBadge.tsx
aegis-ai/frontend/lib/: api.ts
aegis-ai/frontend/src/components/: JsonViewer.tsx  LoadingSkeleton.tsx  MetricCard.tsx  SeverityBadge.tsx  Sidebar.tsx  StatusBadge.tsx
aegis-ai/frontend/src/lib/: api.timeline-graph.ts
aegis-ai/infrastructure/docker/: docker-compose.yml
aegis-ai/infrastructure/docker/postgres/: init.sql
aegis-ai/infrastructure/monitoring/prometheus/: prometheus.yml
aegis-ai/scripts/: dev-setup.sh
aegis-ai/services/agent-orchestrator/: requirements.txt
aegis-ai/services/agent-orchestrator/app/: kafka.py  schemas.py
aegis-ai/services/asset-discovery/app/: database.py  kafka_client.py  main.py
aegis-ai/services/detection-engine/: requirements.txt
aegis-ai/services/detection-engine/app/: config.py  database.py  kafka.py  main.py  models.py  pipeline.py  schemas.py
aegis-ai/services/gateway/: Dockerfile  alembic.ini  pyproject.toml
aegis-ai/services/gateway/app/: config.py  database.py  dependencies.py  main.py
aegis-ai/services/gateway/app/models/: db.py  schemas.py
aegis-ai/services/gateway/app/routers/: auth.py  users.py
aegis-ai/services/gateway/app/services/: auth_service.py  startup.py
aegis-ai/services/gateway/tests/: conftest.py
aegis-ai/services/gateway/tests/integration/: test_endpoints.py
aegis-ai/services/gateway/tests/unit/: test_auth.py
aegis-ai/services/telemetry-collector/: Dockerfile
aegis-ai/services/threat-defense-agent/: requirements.txt
aegis-ai/shared/python/: pyproject.toml
aegis-ai/shared/python/aegis_common/: __init__.py  config.py
aegis-ai/shared/python/aegis_common/auth/: __init__.py
aegis-ai/shared/python/aegis_common/kafka/: __init__.py
aegis-ai/shared/python/aegis_common/logging/: __init__.py
aegis-ai/shared/python/aegis_common/models/: __init__.py
aegis-m2/frontend/: package.json  tailwind.config.js
aegis-m2/frontend/app/: globals.css  layout.tsx  page.tsx
aegis-m2/services/asset-discovery/: Dockerfile  pyproject.toml
aegis-m2/services/asset-discovery/app/: config.py  dependencies.py
aegis-m2/services/asset-discovery/app/services/: asset_service.py  scan_service.py
aegis-m2/services/asset-discovery/tests/unit/: test_scanner.py
files/: graph.py  graph_builder.py  graph_query.py  requirements.txt  schemas.py  timeline_collector.py
threat-defense-agent/app/: models.py
threat-defense-agent/app/agents/: preemptive.py
threat-defense-agent/tests/: test_agent.py  test_notifier.py  test_preemptive.py
(+73 files in other folders)
