[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis-asset-discovery"
version = "0.1.0"
description = "Aegis AI — Asset Discovery Service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.23",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic[email]>=2.5.0",
    "aiokafka>=0.10.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "python-nmap>=0.7.1",
    "redis[hiredis]>=5.0.1",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "netaddr>=0.10.1",
    "asyncio-mqtt>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
